--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:allowBackup="true"
@@ -17,6 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Theguardian"
         tools:targetApi="31">
+        <activity
+            android:name=".LiberarLocScreen"
+            android:exported="false" />
+        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="android:screenOrientation"/>
         <activity
             android:name=".WriteNfc"
             android:exported="false" />
@@ -31,6 +43,9 @@
             android:exported="true" />
         <activity
             android:name=".RegisterCreditCard"
+            android:exported="true" />
+        <activity
+            android:name=".HomeGerente"
             android:exported="true" />
         <activity
             android:name=".loginScreen"
