--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         tools:targetApi="31">
         <activity
             android:name=".LiberarLocScreen"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop"/>
         <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
             tools:replace="android:screenOrientation"/>
